--- a/public/cart.html
+++ b/public/cart.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - UN533N</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-black text-white">
+<body class="bg-primary text-secondary">
     <header class="py-4 px-8">
         <nav class="flex justify-between items-center">
-            <a href="/" class="text-2xl font-bold">UN533N</a>
+            <a href="index.html" class="text-2xl font-bold text-accent">UN533N</a>
             <ul class="flex space-x-8">
-                <li><a href="/" class="hover:text-gray-400">Home</a></li>
-                <li><a href="/shop" class="hover:text-gray-400">Shop</a></li>
-                <li><a href="/about" class="hover:text-gray-400">About</a></li>
-                <li><a href="/contact" class="hover:text-gray-400">Contact</a></li>
+                <li><a href="index.html" class="hover:text-accent">Home</a></li>
+                <li><a href="shop.html" class="hover:text-accent">Shop</a></li>
+                <li><a href="about.html" class="hover:text-accent">About</a></li>
+                <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
             </ul>
             <div>
-                <a href="/cart" class="hover:text-gray-400">Cart</a>
-                <a href="/login" class="ml-4 hover:text-gray-400">Login</a>
+                <a href="cart" class="hover:text-accent">Cart</a>
+                <a href="login" class="ml-4 hover:text-accent">Login</a>
             </div>
         </nav>
     </header>
@@ -36,7 +35,7 @@
                     </div>
                 </div>
                 <div>
-                    <input type="number" value="1" class="w-16 bg-gray-800 border border-gray-700 rounded py-1 px-2">
+                    <input type="number" value="1" class="w-16 bg-secondary text-primary border border-gray-700 rounded py-1 px-2">
                 </div>
                 <div>
                     <p>$100</p>
@@ -47,12 +46,12 @@
             </div>
             <div class="mt-8 text-right">
                 <p class="text-xl">Subtotal: <span class="font-bold">$100</span></p>
-                <a href="/checkout" class="mt-4 inline-block bg-white text-black py-2 px-8 rounded-full font-bold">Checkout</a>
+                <a href="checkout" class="mt-4 inline-block bg-accent text-primary py-2 px-8 rounded-full font-bold">Checkout</a>
             </div>
         </div>
     </main>
 
-    <footer class="bg-gray-900 text-white py-8 mt-16">
+    <footer class="bg-primary text-secondary py-8 mt-16">
         <div class="container mx-auto text-center">
             <p>&copy; 2025 UN533N. All rights reserved.</p>
         </div>
