--- a/public/checkout.html
+++ b/public/checkout.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - UN533N</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-black text-white">
+<body class="bg-primary text-secondary">
     <header class="py-4 px-8">
         <nav class="flex justify-between items-center">
-            <a href="/" class="text-2xl font-bold">UN533N</a>
+            <a href="index.html" class="text-2xl font-bold text-accent">UN533N</a>
             <ul class="flex space-x-8">
-                <li><a href="/" class="hover:text-gray-400">Home</a></li>
-                <li><a href="/shop" class="hover:text-gray-400">Shop</a></li>
-                <li><a href="/about" class="hover:text-gray-400">About</a></li>
-                <li><a href="/contact" class="hover:text-gray-400">Contact</a></li>
+                <li><a href="index.html" class="hover:text-accent">Home</a></li>
+                <li><a href="shop.html" class="hover:text-accent">Shop</a></li>
+                <li><a href="about.html" class="hover:text-accent">About</a></li>
+                <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
             </ul>
             <div>
-                <a href="/cart" class="hover:text-gray-400">Cart</a>
-                <a href="/login" class="ml-4 hover:text-gray-400">Login</a>
+                <a href="cart" class="hover:text-accent">Cart</a>
+                <a href="login" class="ml-4 hover:text-accent">Login</a>
             </div>
         </nav>
     </header>
@@ -32,25 +31,25 @@
                 <form action="" class="space-y-4 mt-4">
                     <div>
                         <label for="name" class="block">Full Name</label>
-                        <input type="text" id="name" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4">
+                        <input type="text" id="name" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4">
                     </div>
                     <div>
                         <label for="address" class="block">Address</label>
-                        <input type="text" id="address" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4">
+                        <input type="text" id="address" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4">
                     </div>
                     <div class="grid grid-cols-2 gap-4">
                         <div>
                             <label for="city" class="block">City</label>
-                            <input type="text" id="city" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4">
+                            <input type="text" id="city" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4">
                         </div>
                         <div>
                             <label for="state" class="block">State</label>
-                            <input type="text" id="state" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4">
+                            <input type="text" id="state" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4">
                         </div>
                     </div>
                     <div>
                         <label for="zip" class="block">ZIP Code</label>
-                        <input type="text" id="zip" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4">
+                        <input type="text" id="zip" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4">
                     </div>
                 </form>
             </div>
@@ -76,12 +75,12 @@
                         <!-- Stripe Elements will go here -->
                     </div>
                 </div>
-                <button class="mt-8 w-full bg-white text-black py-2 px-8 rounded-full font-bold">Place Order</button>
+                <button class="mt-8 w-full bg-accent text-primary py-2 px-8 rounded-full font-bold">Place Order</button>
             </div>
         </div>
     </main>
 
-    <footer class="bg-gray-900 text-white py-8 mt-16">
+    <footer class="bg-primary text-secondary py-8 mt-16">
         <div class="container mx-auto text-center">
             <p>&copy; 2025 UN533N. All rights reserved.</p>
         </div>
