--- a/public/product-detail.html
+++ b/public/product-detail.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product - UN533N</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-black text-white">
+<body class="bg-primary text-secondary">
     <header class="py-4 px-8">
         <nav class="flex justify-between items-center">
-            <a href="/" class="text-2xl font-bold">UN533N</a>
+            <a href="/" class="text-2xl font-bold text-accent">UN533N</a>
             <ul class="flex space-x-8">
-                <li><a href="index.html" class="hover:text-gray-400">Home</a></li>
-                <li><a href="shop.html" class="hover:text-gray-400">Shop</a></li>
-                <li><a href="about.html" class="hover:text-gray-400">About</a></li>
-                <li><a href="contact.html" class="hover:text-gray-400">Contact</a></li>
+                <li><a href="index.html" class="hover:text-accent">Home</a></li>
+                <li><a href="shop.html" class="hover:text-accent">Shop</a></li>
+                <li><a href="about.html" class="hover:text-accent">About</a></li>
+                <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
             </ul>
             <div>
-                <a href="/cart" class="hover:text-gray-400">Cart</a>
-                <a href="/login" class="ml-4 hover:text-gray-400">Login</a>
+                <a href="/cart" class="hover:text-accent">Cart</a>
+                <a href="/login" class="ml-4 hover:text-accent">Login</a>
             </div>
         </nav>
     </header>
@@ -35,7 +34,7 @@
                 <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl nec ultricies lacinia, nisl nisl aliquet nisl, eget aliquam nisl nisl sit amet nisl.</p>
                 <div class="mt-8">
                     <label for="size" class="block">Size</label>
-                    <select id="size" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4 mt-2">
+                    <select id="size" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4 mt-2">
                         <option>S</option>
                         <option>M</option>
                         <option>L</option>
@@ -44,19 +43,19 @@
                 </div>
                 <div class="mt-4">
                     <label for="color" class="block">Color</label>
-                    <select id="color" class="w-full bg-gray-800 border border-gray-700 rounded py-2 px-4 mt-2">
+                    <select id="color" class="w-full bg-secondary text-primary border border-gray-700 rounded py-2 px-4 mt-2">
                         <option>Black</option>
                         <option>White</option>
                     </select>
                 </div>
                 <div class="mt-8">
-                    <button class="w-full bg-white text-black py-2 px-8 rounded-full font-bold">Add to Cart</button>
+                    <button class="w-full bg-accent text-primary py-2 px-8 rounded-full font-bold">Add to Cart</button>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer class="bg-gray-900 text-white py-8 mt-16">
+    <footer class="bg-primary text-secondary py-8 mt-16">
         <div class="container mx-auto text-center">
             <p>&copy; 2025 UN533N. All rights reserved.</p>
         </div>
